erDiagram
    capability ||--o{ competency : "has"
    competency ||--o{ skill : "has"
    competency ||--o{ behavior : "has"
    skill ||--o{ proficiency : "has"
    skill }o--|| skill : "related to"
    skill_relationship }o--|| relationship_type : "is of type"

    capability {
        string id PK
        string name
        string description
        datetime created_at
        datetime updated_at
        json custom_fields
    }

    competency {
        string id PK
        string name
        string description
    }

    skill {
        string id PK
        string name
        string description
        string category
        string criticality
        datetime created_at
        datetime updated_at
        json custom_fields
        boolean is_active
    }

    behavior {
        string id PK
        string name
        string description
        string competency_id FK
    }

    proficiency {
        int id PK
        string name
        string description
        int level
        string skill_id FK
    }

    relationship_type {
        string id PK
        string name
        string description
    }

    skill_relationship {
        int id PK
        string source_skill_id FK
        string target_skill_id FK
        string relationship_type_id FK
    }
